PROJECT(skipdbv2)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
ADD_DEFINITIONS(-Os -g -Wstrict-prototypes -Wall  -falign-loops=16 -DBUILDING_SKIPDB_DLL)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/basekit/simd_cph/include ${PROJECT_SOURCE_DIR}/basekit ${PROJECT_SOURCE_DIR}/jfile ${PROJECT_SOURCE_DIR}/udb ${PROJECT_SOURCE_DIR}/skipdb)
FILE(GLOB_RECURSE BASEKIT_SRC ${PROJECT_SOURCE_DIR}/basekit/*.c)
FILE(GLOB_RECURSE FILE_SRC ${PROJECT_SOURCE_DIR}/jfile/*.c)
FILE(GLOB_RECURSE UDB_SRC ${PROJECT_SOURCE_DIR}/udb/*.c)
FILE(GLOB_RECURSE SKIPDB_SRC ${PROJECT_SOURCE_DIR}/skipdb/*.c)
FILE(GLOB_RECURSE MGR_SRC ${PROJECT_SOURCE_DIR}/mgr/*.c)
ADD_LIBRARY(skipdb STATIC ${BASEKIT_SRC} ${FILE_SRC} ${UDB_SRC} ${SKIPDB_SRC})

ADD_EXECUTABLE(test ./tests/test.c)
TARGET_LINK_LIBRARIES(test m skipdb)

ADD_EXECUTABLE(test2 ./tests/test2.c)
TARGET_LINK_LIBRARIES(test2 m skipdb)

ADD_EXECUTABLE(example ./tests/example.c)
TARGET_LINK_LIBRARIES(example m skipdb)

ADD_EXECUTABLE(skiplist ./tests/skiplist)

ADD_EXECUTABLE(skipd ${MGR_SRC})
TARGET_LINK_LIBRARIES(skipd ev m skipdb)
